# ShelfSpot

./: .dockerignore  .env.docker.example  .gitignore  Dockerfile  README.md  UNIFIED-CONTAINER.md  debug-database.sh  docker-compose.unified.yml  docker-compose.yml  entrypoint.sh  setup.ps1  setup.sh
backend/: .env.example  Cargo.toml  Dockerfile  package.json  swagger.json
backend/migrations/: 20260403000000_init_postgres_schema.sql
backend/prisma/: schema.prisma
backend/src/: app.controller.ts  app.module.ts  app.service.ts  config.rs  db.rs  error.rs  main.rs  main.ts  state.rs  swagger.rs
backend/src/alerts/: alerts.controller.ts  alerts.module.ts  alerts.service.ts
backend/src/api/: mod.rs
backend/src/auth/: admin.controller.ts  auth.controller.ts  auth.module.ts  auth.service.ts
backend/src/consumables/: consumables.controller.spec.ts  consumables.controller.ts  consumables.module.ts  consumables.service.spec.ts  consumables.service.ts
backend/src/containers/: containers.controller.ts  containers.module.ts  containers.service.ts
backend/src/domain/: mod.rs
backend/src/email/: email.service.ts
backend/src/favourites/: favourites.controller.spec.ts  favourites.controller.ts  favourites.module.ts  favourites.service.spec.ts  favourites.service.ts
backend/src/infra/: mod.rs
backend/src/items/: items.controller.spec.ts  items.controller.ts  items.module.ts  items.service.ts
backend/src/notifications/: notifications.controller.ts  notifications.module.ts  push-notification.service.ts
backend/src/places/: places.controller.ts  places.module.ts  (+1 more)
(+206 files in other folders)
